[gd_scene load_steps=38 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player/player_v2_08.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player/player_v2_09.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Player/player_v2_19.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player/player_v2_20.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player/player_v2_06.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player/player_v2_07.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player/player_v2_17.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player/player_v2_18.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player/player_v2_15.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player/player_v2_16.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player/player_v2_14.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player/player_v2_27.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player/player_v2_28.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player/player_v2_29.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/Player/player_v2_30.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/Player/player_v2_31.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/Player/player_v2_32.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/Player/player_v2_33.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/Player/player_v2_34.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/Player/player_v2_35.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/Player/player_v2_36.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/Player/player_v2_37.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/Player/player_v2_38.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/Player/player_v2_10.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/Player/player_v2_11.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/Player/player_v2_23.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/Player/player_v2_24.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/Player/player_v2_39.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/Player/player_v2_40.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/Player/player_v2_21.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/Player/player_v2_22.png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "walk_left",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idlw_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle_right",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "walk_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "idle_left",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "walk_down",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
} ]

[node name="Player" type="Node2D"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 0, -1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="UpperBody" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 1 )
animation = "walk_right"

[node name="LowerBody" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 2 )
animation = "walk_right"

[node name="LeftHand" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 3 )
animation = "walk_right"

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 4 )

[node name="RightHand" type="AnimatedSprite" parent="KinematicBody2D"]
frames = SubResource( 5 )
animation = "walk_right"
